--- a/grid/files/css/styles.css
+++ b/grid/files/css/styles.css
@@ -2,8 +2,6 @@
 
 * {
   margin: 0;
-  padding: 0;
-  box-sizing:;
 }
 
 body, html {
@@ -12,7 +10,7 @@ body, html {
 }
 
 body {
-  background: #f0f0f0;
+  background: #ffffff;
   font-family: Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-align: left;
@@ -40,13 +38,13 @@ a:hover {
 
 
 /* Header */
+
 header {
   width: 100%;
   height: 100px;
+  margin: 0 auto;
   background: #ffffff;
   border-bottom: 1px solid rgba(0,0,0,.25);
-  position: fixed;
-  top: 0;
 }
 
 #inner-wrapper {
@@ -56,38 +54,10 @@ header {
 
 #logo {
   width: 50%;
-  padding: 25px;
+  padding-top: 25px;
   float: left;
 }
 
-#nav {
-  float: right;
-}
-
-#nav ul {
-  list-style-type: none;
-}
-
-#nav ul li {
-  font-size: 14px;
-  line-height: 100px;
-  font-weight: normal;
-  padding-left: 17px;
-  display: inline-block;
-}
-
-#nav ul li.active a {
-  color: #222222;
-  font-weight: bold;
-}
-
-#CONTENT {
-  width: 940px;
-  background: #ffffff;
-  margin: 0 auto;
-  padding: 20px;
-  margin-top: 100px;
-}
 h1 {
   width: 50px;
   background: #14BDD1;
@@ -106,4 +76,55 @@ h2 {
   line-height: 50px;
   color: #222222;
   display: inline-block;
+}
+
+#nav {
+  float: right;
+}
+
+#nav ul {
+  list-style-type: none;
+}
+
+  #nav ul li {
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 100px;
+    float: left;
+    padding-left: 17px;
+  }
+
+  #nav ul li.active a {
+    color: #222222 !important;
+    font-weight: bold;
+  }
+
+
+/* Content */
+
+#content {
+  width: 940px;
+  background: #ffffff;
+  margin: 50px auto 0 auto;
+}
+
+.project {
+  width: 220px;
+  height: 110px;
+  background: #cccccc;
+  color: #ffffff;
+  text-align: center;
+  line-height: 110px;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.project:hover {
+  background: #eeeeee;
+  color: #aaaaaa;
+}
+
+.last {
+  margin: 0;
 }
