--- a/assignment1/files/css/styles.css
+++ b/assignment1/files/css/styles.css
@@ -1,4 +1,3 @@
-
 * {
 	margin: 0;
 	padding: 0;
@@ -30,20 +29,22 @@ a:hover{
 }
 
 
-
 .navigation { 
 	font-family: Helvetica, sans-serif;
 	font-weight: bold;
 	text-align: center; 
-	margin: auto;
+	margin: 0 auto;
 	text-decoration: none; 
 	text-transform: uppercase;
 	font-size: 12px;
 	letter-spacing: 1px;
-	word-spacing: 65px;
-	padding-bottom: 25px;
-	top: 65px;
+	padding-bottom: 20px;
+	top: 50px;
 	position: relative;
+}
+
+.navigation a{
+	padding: 0 25px;
 }
 
 .navigation a:hover{
@@ -74,7 +75,7 @@ hr {
 }
 
 h1 {
-	font-size: 30pt;
+	font-size: 33pt;
 	line-height: 57pt; 
 	line-spacing: -20;
 }
@@ -82,7 +83,7 @@ h1 {
 .h1text {
 	margin: 0 auto;
 	text-align: center;
-	width: 600px;
+	width: 454px;
 	line-height: 1.7;
 }
 
@@ -100,14 +101,11 @@ h2 {
 	text-align: center;
 	font-size: 20pt;
 	letter-spacing: -20;
-	padding-top: 65px;
-	padding-bottom: 25px;
 }
 .recent {
 	padding-bottom: 220px;
 	border-bottom: 5px solid #e03d4e;
 }
-
 
 .container { 
 	text-align: center;
@@ -116,25 +114,23 @@ h2 {
 	width: 940px;
 	}
 
-.column-left{ float: left; width: 32%; }
-.column-right{ float: right; width: 32%; }
-.column-center{ display: inline-block; width: 32%; }
+.column-left{ float: left; width: 33%; }
+.column-right{ float: right; width: 33%; }
+.column-center{ display: inline-block; width: 33%; }
 
 h3 { 
 	text-align: center; 
 	font-size: 16pt;
 	line-height: 22pt;
 	letter-spacing: -20;
-	padding-top:25px;
 }
 
 .h2text {
 	margin: 0 auto;
-	text-align: justify;
+	text-align: center;
 	width: auto;
 	line-height: 1.7;
 }
-
 
 .bottom {
 	position: relative;
