--- a/assignment1/files/css/styles.css
+++ b/assignment1/files/css/styles.css
@@ -1,144 +1,152 @@
+/* General */
+
 * {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-html, body { 
-	height: 100%;
-	width: 100%;
+html,
+body {
+  height: 100%;
+  width: 100%;
 }
 
-body { 
-	background: #FFFFFF;
-	font-family: 'Helvetica', Arial, sans-serif;
-	font-weight: normal;
-	text-align: left;
-	color: #222222;
+body {
+  background: #ffffff;
+  font-family: 'Helvetica', Arial, sans-serif;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #222222;
+}
+
+a,
+a:active,
+a:visited {
+  color: #df3b4d;
+  text-decoration: none;
+  font-weight: bold;
+  transition: all 150ms ease-in-out;
+}
+
+a:hover {
+  color: #222222;
 }
 
 
-a { 
-	text-decoration: none;
-	color: #df3b4d;
-	font-weight: bold;
-	}
-
-a:hover{
-	color: #222222;
+/* Header */
+header {
+  background: #f0f0f0;
+  border-bottom: 2px solid #df3b4d;
+  height: 260px;
 }
 
-
-.navigation { 
-	font-family: Helvetica, sans-serif;
-	font-weight: bold;
-	text-align: center; 
-	margin: 0 auto;
-	text-decoration: none; 
-	text-transform: uppercase;
-	font-size: 12px;
-	letter-spacing: 1px;
-	padding-bottom: 20px;
-	top: 50px;
-	position: relative;
+.inner-wrapper {
+  width: 100%;
+  max-width: 460px;
+  margin: 0 auto;
+  text-align: center;
+  height: 100%;
+  position: relative;
 }
 
-.navigation a{
-	padding: 0 25px;
+.logo {
+  padding-top: 40px;
 }
 
-.navigation a:hover{
-	color: #222222;
+nav ul {
+  list-style-type: none;
+  padding: 0;
+  border-top: 1px solid #c0c0c0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
 }
 
-hr {
-	position: relative;
-	top: 40px;
-	margin: 0 auto;
-	width: 460px;
-	height: 1px; 
-	background-color: #C0C0C0;
-	color: #C0C0C0;
+ul:after {
+  width: 100%;
+  display: inline-block;
+  content: '';
+  visibility: hidden;
 }
 
-.wrapper { 
-	text-align: center; 
-	padding: 50px 50px 50px 50px;
-	background-color: #F0F0F0;
+nav ul li {
+  padding: 10px 11% 15px 0;
+  text-transform: uppercase;
+  width: auto;
+  display: inline-block;
+  font-size: 14px;
+  line-height: 1.5;
 }
 
-.content{
-	background-color: #FFFFFF;
-	text-align: center;
-	padding: 50px 50px 50px 50px; 
-	border-top: 2px solid #E03D4E;
+  nav ul li:last-of-type {
+    padding-right: 0;
+  }
+
+  .active a {
+    color: #222222;
+  }
+
+.content {
+  max-width: 940px;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
 }
 
-h1 {
-	font-size: 33pt;
-	line-height: 57pt; 
-	line-spacing: -20;
+.content:after {
+  display: table;
+  content: '';
+  clear: both;
 }
 
-.h1text {
-	margin: 0 auto;
-	text-align: center;
-	width: 454px;
-	line-height: 1.7;
+.content > img {
+  margin: 50px 0 25px;
 }
 
-hr.second {
-	position: relative;
-	top: -30px;
-	margin: 0 auto;
-	width: 460px;
-	height: 1px; 
-	background-color: #C0C0C0;
-	color: #C0C0C0;
+.main-section {
+  max-width: 460px;
+  width: 100%;
+  margin: 0 auto;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #d3d3d3;
+  margin-bottom: 40px;
+}
+
+.main-section > p {
+  margin-bottom: 30px;
 }
 
 h2 {
-	text-align: center;
-	font-size: 20pt;
-	letter-spacing: -20;
-}
-.recent {
-	padding-bottom: 220px;
-	border-bottom: 5px solid #e03d4e;
+  font-size: 32px;
+  line-height: 48px;
 }
 
-.container { 
-	text-align: center;
-	position: relative;
-	margin: 0 auto;
-	width: 940px;
-	}
-
-.column-left{ float: left; width: 33%; }
-.column-right{ float: right; width: 33%; }
-.column-center{ display: inline-block; width: 33%; }
-
-h3 { 
-	text-align: center; 
-	font-size: 16pt;
-	line-height: 22pt;
-	letter-spacing: -20;
+.product {
+  width: 300px;
+  margin-right: 20px;
+  float: left;
+  margin-bottom: 200px;
 }
 
-.h2text {
-	margin: 0 auto;
-	text-align: center;
-	width: auto;
-	line-height: 1.7;
+.product:last-child {
+  margin-right: 0;
 }
 
-.bottom {
-	position: relative;
-	padding: 50px 50px 50px 50px;
-	background-color: #000000;
-	top: 420px;
-	height: 195px;
-	margin: 0 auto;
-	text-align: center;
+.product > p {
+  margin-bottom: 30px;
+}
 
+footer {
+  width: 100%;
+  height: 200px;
+  border-top: 2px solid #df3b4d;
+  background: #222222;
+  text-align: center;
+}
+
+footer img {
+  margin-top: 50px;
 }
