--- a/slideshow/css/styles.css
+++ b/slideshow/css/styles.css
@@ -1,4 +1,4 @@
-/* General Styles */
+
 
 * {
   margin: 0;
@@ -115,4 +115,4 @@ h2 {
 
 #right-column {
   font-family: "museo-sans-1","museo-sans-2",sans-serif;
-}
+} *
