--- a/work/files/css/styles.css
+++ b/work/files/css/styles.css
@@ -1,23 +1,21 @@
+/* General Styles */
+
 * {
-	margin-top: 20px;
-	margin-left: -10px;
-	padding: 5px;
+  margin: 0;
 }
 
 body, html {
-	height: 100%
-	width: 100%;
+  height: 100%;
+  width: 100%;
 }
 
 body {
-	background: #ffffff;
-	font-family: Helvetica, arial, sans-serif;
-	font-weight: bold;
-	font-size: 100px;
-	text-align: right;
-	line-height: 30px;
-	color: #000000;
-
+  background: #ffffff;
+  font-family: Helvetica, Arial, sans-serif;
+  font-weight: bold;
+  text-align: right;
+  color: #000000;
+  font-size: 100px;
 }
 
 a, a:visited {
@@ -31,11 +29,49 @@ a:hover {
   text-decoration: underline;
 }
 
+.italic {
+  font-style: italic;
 }
-ul
-{
-    list-style-type: none;
-    margin-top:50px;
+
+.bold {
+  font-weight: bold;
 }
-    
+
+
+
+
+
+#content {
+  width: 1000px;
+  margin: 100px auto 0px auto;
 }
+
+.project {
+  width: 220px;
+  height: 180px;
+  background: #cccccc;
+  color: #ffffff;
+  text-align: center;
+  line-height: 100px;
+  float: left;
+  margin-top: 40px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  -webkit-transition: all 0.4s ease;
+  -moz-transition: all 0.4s ease;
+  -o-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+  .project img {
+    height: 200%;
+  }
+
+  .project:hover {
+    opacity: .65;
+  }
+
+  .last {
+    margin-right: 0px;
+  }
